--- a/api-engine/build.gradle
+++ b/api-engine/build.gradle
@@ -1,7 +1,14 @@
+group 'org.cn'
+version '1.0-SNAPSHOT'
+
 apply plugin: 'java'
 
 targetCompatibility = '1.7'
 sourceCompatibility = '1.7'
+
+repositories {
+    mavenCentral()
+}
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
