--- a/teach-core/build.gradle
+++ b/teach-core/build.gradle
@@ -1,19 +1,14 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 
 android {
     compileSdkVersion 24
     buildToolsVersion "24.0.2"
-    dataBinding {
-        enabled true;
-    }
+
     defaultConfig {
-        applicationId "org.cn.android"
         minSdkVersion 21
         targetSdkVersion 24
         versionCode 1
         versionName "1.0"
-        setMultiDexEnabled(true)
-        getVectorDrawables().setUseSupportLibrary(true)
     }
     buildTypes {
         release {
@@ -27,11 +22,4 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.2.0'
-    compile 'com.android.support:design:24.2.0'
-
-    compile project(':teach-core')
-    compile project(':orm')
-    compile project(':api-engine')
-
-    compile 'com.alibaba:fastjson:1.2.16'
 }
